maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:50: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^WallFollowerMaze:65: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^