maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  var x=0
  if (!gauche())
  		x=1

  while(!estSurBiscuit()){
    keepHandOnSideWall(x)
  }
  prendBiscuit()
}

def keepHandOnSideWall(x : Int) {
  if (murcote(x)){
    if (!estFaceMur())
    	avance()
    else if (x==0)
    	droite()
    else
    	gauche()
    
  }
 
  else {
    if (x==0) {
      gauche()
    }
    else
    	droite()
  }
  
  
}


def gauche() : Boolean ={
  gauche()
  if (estFaceMur()){
  	droite()
    return true}
  else{
    droite()
    return false
  }
  	
}

def murcote(x:Int) : Boolean = {
  if (x==0){
    if (estFaceMur())
    	droite()
    else {
    	gauche()
    	if (estFaceMur()){
      	droite()
      	return true
    	}
    	else {
      	droite()
      	return false
    	}
    }
  }
  else {
    if (estFaceMur())
    	droite()
    else {
     	droite()
   		if (estFaceMur()){
      	gauche()
      	return true
    	}
    	else {
      	gauche()
      	return false
    }
    }
    
  }
}